--- a/animation_system/animation_system.vcxproj
+++ b/animation_system/animation_system.vcxproj
@@ -141,11 +141,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\src\DebugRenderer.cpp" />
     <ClCompile Include="..\src\Gfx.cpp" />
     <ClCompile Include="..\src\glad.c" />
     <ClCompile Include="..\src\gltf.cpp" />
     <ClCompile Include="..\src\Math.cpp" />
     <ClCompile Include="..\src\SampleRenderer.cpp" />
+    <ClCompile Include="..\src\Skinning.cpp" />
     <ClCompile Include="..\src\utils.cpp" />
     <ClCompile Include="..\src\WinMain.cpp" />
   </ItemGroup>
@@ -154,10 +156,12 @@
     <ClInclude Include="..\src\Camera.h" />
     <ClInclude Include="..\src\cgltf.h" />
     <ClInclude Include="..\src\Animation.h" />
+    <ClInclude Include="..\src\DebugRenderer.h" />
     <ClInclude Include="..\src\gltf.h" />
     <ClInclude Include="..\src\Math.h" />
     <ClInclude Include="..\src\Gfx.h" />
     <ClInclude Include="..\src\SampleRenderer.h" />
+    <ClInclude Include="..\src\Skinning.h" />
     <ClInclude Include="..\src\stb_image.h" />
     <ClInclude Include="..\src\Transform.h" />
     <ClInclude Include="..\src\utils.h" />
