--- a/animation_system/animation_system.vcxproj
+++ b/animation_system/animation_system.vcxproj
@@ -168,6 +168,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="..\src\Shaders\lit.frag" />
+    <None Include="..\src\Shaders\preskinned.vert" />
     <None Include="..\src\Shaders\skin.vert" />
     <None Include="..\src\Shaders\static.vert" />
   </ItemGroup>
