--- a/animation_system/animation_system.vcxproj.filters
+++ b/animation_system/animation_system.vcxproj.filters
@@ -97,5 +97,8 @@
     <None Include="..\src\Shaders\skin.vert">
       <Filter>Resource Files\Shaders</Filter>
     </None>
+    <None Include="..\src\Shaders\preskinned.vert">
+      <Filter>Resource Files\Shaders</Filter>
+    </None>
   </ItemGroup>
 </Project>
